Kubernetes/Authentik/yamls/ig-authentik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-https-redirect
  namespace: authentik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-security
  namespace: authentik
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-websecure
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`authentik.domain.com`)
    kind: Rule
    services:
    - name: authentik-server
      port: 80
      serversTransport: authentik-transport
    middlewares:
      - name: authentik-security
  tls:
    secretName: authentik-domain-com
    options:
      name: authentik-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-web
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`authentik.domain.com`)
    kind: Rule
    services:
    - name: authentik-server
      port: 80
    middlewares:
      - name: authentik-https-redirect
